<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
       android:id="@+id/undo"
       android:title="@string/menuitem_undo"
       android:icon="@drawable/undo1"
       app:showAsAction="always">
   </item>

   <item
       android:id="@+id/redo"
       android:title="@string/menuitem_redo"
       android:icon="@drawable/redo1"
       app:showAsAction="always">
   </item>

   <item
       android:id="@+id/tool"
       android:title="@string/menuitem_tool"
       android:icon="@drawable/tools11"
       app:showAsAction="always">
   </item>

   <item
      android:id="@+id/color"
      android:title="@string/menuitem_color"
      android:icon="@drawable/colors11"
      app:showAsAction="always">
   </item>

   <item
      android:id="@+id/line_width"
      android:title="@string/menuitem_line_width"
      android:icon="@drawable/linewidth11"
      app:showAsAction="always">
   </item>

   <item
      android:id="@+id/delete_drawing"
      android:title="@string/menuitem_delete"
      android:icon="@drawable/ic_delete_24dp"
      app:showAsAction="ifRoom">
   </item>

   <item
      android:id="@+id/save"
      android:title="@string/menuitem_save"
      android:icon="@drawable/ic_save_24dp"
      app:showAsAction="ifRoom">
   </item>
   <item
       android:id="@+id/open"
       android:title="@string/menuitem_open"
       android:icon="@drawable/ic_save_24dp"
       app:showAsAction="ifRoom">
   </item>

   <item
       android:id="@+id/camera"
       android:title="@string/menuitem_camera"
       android:icon="@drawable/ic_save_24dp"
       app:showAsAction="ifRoom">
   </item>

   <item
      android:id="@+id/print"
      android:title="@string/menuitem_print"
      android:icon="@drawable/ic_print_24dp"
      app:showAsAction="ifRoom">
   </item>

   <item
       android:id="@+id/settings"
       android:title="@string/menuitem_settings"
       android:icon="@drawable/ic_print_24dp"
       app:showAsAction="ifRoom">
   </item>
</menu>